<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find My Size</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_store_menu">StoreMenu</string>
    <string name="title_activity_female_measurements">Female Measurements</string>
    <string name="title_activity_male_measurements">Male Measurements</string>
    <string name="title_activity_child_measurements">Child Measurements</string>
    <string name="measure_bust">Bust</string>
    <string name="measure_waist">Waist</string>
    <string name="measure_hip">Hip</string>
    <string name="measure_inseam">Inseam</string>
    <string name="measure_height">Height</string>
    <string name="measure_weight">Weight</string>
    <string name="measure_chest">Chest</string>
    <string name="measure_sleeve">Sleeve</string>
    <string name="done_measuring">Continue</string>
    <string name="measure_bustchest">Bust/Chest</string>
    <string name="title_activity_size_calculator">Size Calculator</string>
    <string name="instructions_measuring">Enter measurement(s) in INCHES.</string>
    <string name="first_question">What are you shopping for?</string>

</resources>
