<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".FemaleMeasurements" >
    
   	<TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/instructions_measuring"/>   
    
    <EditText
        android:id="@+id/editTextBust"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:hint="@string/measure_bust"/>
    
    <EditText
        android:id="@+id/editTextHip"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:hint="@string/measure_hip"/>
    
    <EditText
        android:id="@+id/editTextWaist"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:hint="@string/measure_waist"/>
    
    <EditText
        android:id="@+id/editTextInseam"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:inputType="number"
        android:hint="@string/measure_inseam"/>
    
    <Button
        android:id="@+id/buttonGo"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/done_measuring"
        android:onClick="goToStores"/>

</LinearLayout>
